# solar

./: .gitignore  README.md  pyproject.toml
solar/: __init__.py
solar/config/: __init__.py  model.py
solar/domain/: __init__.py  gold.py  kpi.py  schemas.py  string_currents.py  time.py  transforms.py
solar/orchestration/: __init__.py  runner.py
solar/sources/: __init__.py  inaccess.py  meteocontrol.py
