[project]
name = "solar"
version = "0.1.1"
description = "Solar data processing package with source adapters, silver transformations and KPI calculations."
authors = [
    { name = "Your Team" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "data-platform @ git+https://github.com/GianluigiLig/data_platform.git@v0.1.0",

    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2"
]

[tool.poetry]
packages = [
    { include = "solar" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
